# libdrm-tegra-shim

./: LICENSE  Makefile.am  README.md  configure.ac  libdrm-shim.c  libdrm.pc.in  xf86drm.h  xf86drmMode.h
tools/: genshim.py
